# Pp6

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  plot.py  pyproject.toml  run.sh
src/: Atomic.h  BenchMonteCarlo.cpp  Critical.h  MonteCarlo.cpp  Optimized.h  Reduction.h
